sample/Views/Error/Index.cshtml
@{
    ViewData["Title"] = "Error Index";
}

<h2>@ViewData["Title"]</h2>

<p>This is the error controller index page.</p>

<ul>
    <li><a href="/Error/Error">View Error with Model</a></li>
    <li><a href="/Error/NotFound">View NotFound</a></li>
    <li><a href="/Error/ServerError">View Server Error</a></li>
</ul>
